[package]
name = "skribo"
version = "0.0.1"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "text", "formatting", "layout"]
repository = "https://github.com/linebender/skribo"
description = "A Rust library for low-level text layout."
readme = "README.md"
categories = ["graphics", "text-processing"]

[dependencies]
harfbuzz = {git="https://github.com/cmr/rust-harfbuzz",  branch="web"}#"0.3.1"
harfbuzz-sys = {git="https://github.com/cmr/rust-harfbuzz",  branch="web"}#"0.3.2"
euclid = "0.20"
font-kit = { git="https://github.com/cmr/font-kit.git", branch="web"}#, features = ["loader-freetype-default"] }
unicode-normalization = "0.1.8"
log = "0.4"
lazy_static = "1.4.0"
